--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: tox -e py${{ matrix.python-version }},ruff,mypy
 
       - name: Upload test results
-        if: always()
+        if: always() && matrix.python-version == '3.13'
         uses: actions/upload-artifact@v4
         with:
           name: junit-results
