--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -37,45 +37,45 @@ jobs:
           name: junit-results
           path: results.xml
 
-  deploy-docs:
-    name: Build and Deploy Docs
-    runs-on: ubuntu-latest
-    needs: test
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    steps:
-      - uses: actions/checkout@v4
+  # deploy-docs:
+  #   name: Build and Deploy Docs
+  #   runs-on: ubuntu-latest
+  #   needs: test
+  #   permissions:
+  #     contents: read
+  #     pages: write
+  #     id-token: write
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
+  #     - name: Set up Python 3.13
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: '3.13'
 
-      - name: Create virtual environment
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install sphinx sphinx-theme-material
+  #     - name: Create virtual environment
+  #       run: |
+  #         python -m venv .venv
+  #         source .venv/bin/activate
+  #         pip install sphinx sphinx-theme-material
 
-      - name: Build Sphinx docs
-        run: |
-          mkdir .public
-          sphinx-build -W -b html docs/source/ .public/
+  #     - name: Build Sphinx docs
+  #       run: |
+  #         mkdir .public
+  #         sphinx-build -W -b html docs/source/ .public/
 
-      - name: Upload artifact for Pages
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: .public
+  #     - name: Upload artifact for Pages
+  #       uses: actions/upload-pages-artifact@v3
+  #       with:
+  #         path: .public
 
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: deploy-docs
-    permissions:
-      pages: write
-      id-token: write
-    steps:
-      - name: Deploy
-        uses: actions/deploy-pages@v4
+  # deploy:
+  #   name: Deploy to GitHub Pages
+  #   runs-on: ubuntu-latest
+  #   needs: deploy-docs
+  #   permissions:
+  #     pages: write
+  #     id-token: write
+  #   steps:
+  #     - name: Deploy
+  #       uses: actions/deploy-pages@v4
