--- a/.github/workflows/.docs-ci.yml
+++ b/.github/workflows/.docs-ci.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install Sphinx and theme
         run: |
           python -m pip install --upgrade pip
+          python -m pip install -e .
           python -m pip install sphinx furo sphinx_design sphinx-autodoc-typehints
 
       # Optional: configure Pages (sets up base_url, etc.)
