--- a/.github/workflows/.docs-ci.yml
+++ b/.github/workflows/.docs-ci.yml
@@ -3,7 +3,7 @@ name: Docs
 
 on:
   push:
-    branches: [ "sphinx_tester" ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 # Top-level permissions for Pages (recommended)
