--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -38,3 +38,8 @@ jobs:
         with:
           name: junit-results
           path: results.xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.GIST_SECRET }}
