--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ python =
 
 [testenv]
 setenv = PYTHONPATH = {toxinidir}
+passenv = CI CODECOV_*
 deps = -r{toxinidir}{/}requirements_dev.txt
 commands = pytest --basetemp={envtmpdir} --cov-report=term --junitxml=results.xml
 
