--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ python =
 setenv = PYTHONPATH = {toxinidir}
 passenv = CI CODECOV_*
 deps = -r{toxinidir}{/}requirements_dev.txt
-commands = pytest --basetemp={envtmpdir} --cov-report=term --junitxml=results.xml
+commands = pytest --basetemp={envtmpdir} --cov-report=term --junitxml=results.xml codecov
 
 [testenv:ruff]
 basepython = python3.13
