--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,14 @@ python =
 
 [testenv]
 setenv = PYTHONPATH = {toxinidir}
-passenv = CI CODECOV_*
+passenv = 
+    CI
+    GITHUB_*
+    CODECOV_*
 deps = -r{toxinidir}{/}requirements_dev.txt
-commands = pytest --basetemp={envtmpdir} --cov-report=term --junitxml=results.xml codecov
+commands = 
+    pytest --basetemp={envtmpdir} --cov-report=term --junitxml=results.xml 
+    codecov
 
 [testenv:ruff]
 basepython = python3.13
