--- a/.github/workflows/docs-ci.yml
+++ b/.github/workflows/docs-ci.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Build Sphinx docs
         run: |
           mkdir -p public
-          python -m sphinx docs/source public
-          # python -m sphinx -W docs/source public
+          # python -m sphinx docs/source public
+          python -m sphinx -W docs/source public
 
       - name: Upload artifact for Pages
         uses: actions/upload-pages-artifact@v3
